Fix name of imported playbooks to be plural
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/site.yml
+++ b/site.yml
@@ -3,5 +3,5 @@
 - import_playbook: satnogs-clients.yml
 - import_playbook: satnogs-radios.yml
 - import_playbook: hamlib-utils.yml
-- import_playbook: snmpd.yml
-- import_playbook: gpsd.yml
+- import_playbook: snmpds.yml
+- import_playbook: gpsds.yml
