Bind rotctld to localhost by default
This prevents exposure of this service to the outside world / local
network.

Signed-off-by: Bram de Vries <dev@blaet.net>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -73,7 +73,7 @@ satnogs_station_lon: '23.725'
 #hamlib_utils_rig_enabled: False
 #hamlib_utils_rig_opts: '-m 1'
 hamlib_utils_rot_enabled: True
-hamlib_utils_rot_opts: '-m 1'
+hamlib_utils_rot_opts: '-T 127.0.0.1 -m 1'
 
 #
 # SNMPD configuration
