--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,8 +5,8 @@
     msg: 'Detected Ansible {{ ansible_version.full }}. This role requires Ansible {{ version_minimum }} or greater.'
 - name: Check distribution
   assert:
-    that: ansible_distribution == distribution and ansible_distribution_release == distribution_release
-    msg: 'This role requires {{ distribution }} {{ distribution_release }}.'
+    that: dict(id=ansible_lsb.id, codename=ansible_lsb.codename) in lsb_compatibility
+    msg: 'This role does not support {{ ansible_lsb.id }} {{ ansible_lsb.codename }}.'
 - import_tasks: apt.yml
 - import_tasks: packages.yml
 - import_tasks: zram.yml
