--- a/roles/common/tasks/zram.yml
+++ b/roles/common/tasks/zram.yml
@@ -6,7 +6,7 @@
   check_mode: True
   register: dphys_swapfile_package
   become: True
-  until: dphys_swapfile_package
+  until: dphys_swapfile_package is success
   retries: 3
 - name: Disable swap file
   service:
