satnogs-setup: Pull playbook from 'stable' branch
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/defaults/main.yml
+++ b/roles/satnogs-setup/defaults/main.yml
@@ -1,1 +1,2 @@
 satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
+satnogs_setup_ansible_branch: 'stable'
