--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -1,10 +1,10 @@
 ---
 - name: Update APT cache
   apt:
-    update_cache: True
+    update_cache: true
     cache_valid_time: 3600
   when: ansible_os_family == 'Debian'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
@@ -13,7 +13,7 @@
     name: 'gpg'
     state: 'present'
   when: ansible_os_family == 'Debian'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
@@ -23,7 +23,7 @@
     id: '{{ apt_key_id }}'
     state: 'present'
   when: ansible_os_family == 'Debian'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
@@ -33,16 +33,16 @@
     state: 'present'
     mode: 0644
   when: ansible_os_family == 'Debian'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
 - name: Update APT cache
   apt:
-    update_cache: True
+    update_cache: true
     cache_valid_time: 3600
   when: ansible_os_family == 'Debian'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
