--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -3,7 +3,7 @@
   package:
     name: '{{ item }}'
     state: 'present'
-  become: True
+  become: true
   with_items: '{{ packages }}'
   register: res
   until: res is success
