--- a/roles/gpsd/tasks/main.yml
+++ b/roles/gpsd/tasks/main.yml
@@ -3,7 +3,7 @@
   package:
     name: 'gpsd'
     state: 'present'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
@@ -11,15 +11,15 @@
   package:
     name: 'gpsd-clients'
     state: 'present'
-  become: True
+  become: true
   register: res
   until: res is success
   retries: 3
 - name: Start/stop gpsd service
   service:
     name: 'gpsd'
-    enabled: '{{ gpsd_enabled | default(False) }}'
-    state: '{{ "started" if gpsd_enabled | default(False) else "stopped" }}'
-  become: True
+    enabled: '{{ gpsd_enabled | default(false) }}'
+    state: '{{ "started" if gpsd_enabled | default(false) else "stopped" }}'
+  become: true
   tags:
     - config
