--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -43,11 +43,9 @@
   when: libgnuradio_satnogs_package.changed
   tags:
     - skip_ansible_lint
-- name: Install gr-satnogs
+- name: Install packages
   apt:
-    name:
-      - 'gr-satnogs'
-      - 'libgnuradio-satnogs'
+    name: '{{ satnogs_radio_packages }}'
     state: 'present'
   become: true
   register: res
