--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -64,7 +64,13 @@
     mode: 0755
   become: true
   with_together:
-    - [ 'usr/local/bin/satnogs-setup', 'usr/local/share/satnogs-setup/bootstrap.sh',
-    'usr/local/share/satnogs-setup/setup.sh', 'usr/local/share/satnogs-setup/config.sh' ]
-    - [ '/usr/local/bin/satnogs-setup', '/usr/local/share/satnogs-setup/bootstrap.sh',
-    '/usr/local/share/satnogs-setup/setup.sh', '/usr/local/share/satnogs-setup/config.sh' ]
+    -
+      - 'usr/local/bin/satnogs-setup'
+      - 'usr/local/share/satnogs-setup/bootstrap.sh'
+      - 'usr/local/share/satnogs-setup/setup.sh'
+      - 'usr/local/share/satnogs-setup/config.sh'
+    -
+      - '/usr/local/bin/satnogs-setup'
+      - '/usr/local/share/satnogs-setup/bootstrap.sh'
+      - '/usr/local/share/satnogs-setup/setup.sh'
+      - '/usr/local/share/satnogs-setup/config.sh'
