Rename groups in a backwards compatible way
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/satnogs-clients.yml
+++ b/satnogs-clients.yml
@@ -7,3 +7,11 @@
     - role: satnogs-client
       tags:
         - satnogs-client
+- hosts: satnogs_clients
+  roles:
+    - role: common
+      tags:
+        - common
+    - role: satnogs-client
+      tags:
+        - satnogs-client
