--- a/satnogs-radios.yml
+++ b/satnogs-radios.yml
@@ -7,3 +7,11 @@
     - role: satnogs-radio
       tags:
         - satnogs-radio
+- hosts: satnogs_radios
+  roles:
+    - role: common
+      tags:
+        - common
+    - role: satnogs-radio
+      tags:
+        - satnogs-radio
