--- a/satnogs-setups.yml
+++ b/satnogs-setups.yml
@@ -7,3 +7,11 @@
     - role: satnogs-setup
       tags:
         - satnogs-setup
+- hosts: satnogs_setups
+  roles:
+    - role: common
+      tags:
+        - common
+    - role: satnogs-setup
+      tags:
+        - satnogs-setup
