--- a/hamlib-utils.yml
+++ b/hamlib-utils.yml
@@ -7,3 +7,11 @@
     - role: hamlib-utils
       tags:
         - hamlib-utils
+- hosts: hamlib_utils
+  roles:
+    - role: common
+      tags:
+        - common
+    - role: hamlib-utils
+      tags:
+        - hamlib-utils
