Lowercase truthy values
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -84,7 +84,7 @@ satnogs_station_lon: '23.725'
 #
 # Hamlib configuration
 #
-# hamlib_utils_rig_enabled: False
+# hamlib_utils_rig_enabled: false
 # hamlib_utils_rig_opts: 'T 127.0.0.1 -m 1'
 hamlib_utils_rot_enabled: true
 hamlib_utils_rot_opts: '-T 127.0.0.1 -m 1'
@@ -100,4 +100,4 @@ hamlib_utils_rot_opts: '-T 127.0.0.1 -m 1'
 #
 # GPSd configuration
 #
-# gpsd_enabled: False
+# gpsd_enabled: false
