gitlab-ci: Lint YAML files
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,15 @@
+---
 stages:
-  - test
-test:
-  stage: test
+  - static
+static_yaml:
+  stage: static
+  image: python:3
+  before_script:
+    - pip install yamllint==1.15.0
+  script:
+    - 'yamllint -s .'
+static_ansible:
+  stage: static
   image: librespace/ansible
   script:
     - ansible-playbook -i production.dist/inventory --syntax-check -vvv site.yml
