--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,20 @@
 ---
+variables:
+  GITLAB_CI_IMAGE_ANSIBLE: 'librespace/ansible:2.7.9'
+  GITLAB_CI_IMAGE_PYTHON: 'python:3'
+  GITLAB_CI_PYPI_YAMLLINT: 'yamllint~=1.15.0'
 stages:
   - static
 static_yaml:
   stage: static
-  image: python:3
+  image: ${GITLAB_CI_IMAGE_PYTHON}
   before_script:
-    - pip install yamllint==1.15.0
+    - pip install "$GITLAB_CI_PYPI_YAMLLINT"
   script:
     - 'yamllint -s .'
 static_ansible:
   stage: static
-  image: librespace/ansible
+  image: ${GITLAB_CI_IMAGE_ANSIBLE}
   script:
     - ansible-playbook -i production.dist/inventory --syntax-check -vvv site.yml
     - ansible-lint site.yml
