satnogs-client: Add workaround for client rename in version >=1.0
Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-satnogs_client_name: 'satnogsclient'
+satnogs_client_name: "{{ 'satnogsclient' if satnogs_client_version is version('1.0', '<') else 'satnogs-client' }}"
 satnogs_client_user: 'satnogs'
 satnogs_client_packages:
   - 'virtualenv'
