satnogs-client: Allow uninstallation of client after rename (>=1.0)
Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -42,7 +42,7 @@
     - 'share'
 - name: Uninstall satnogs-client
   pip:
-    name: '{{ satnogs_client_name }}'
+    name: '{{ satnogs_client_names }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
     virtualenv_site_packages: true
     editable: false
