--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -1,4 +1,7 @@
 ---
+satnogs_client_names:
+  - 'satnogsclient'
+  - 'satnogs-client'
 satnogs_client_name: "{{ 'satnogsclient' if satnogs_client_version is version('1.0', '<') else 'satnogs-client' }}"
 satnogs_client_user: 'satnogs'
 satnogs_client_packages:
