satnogs-client: Add SENTRY_DSN variable
Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -7,7 +7,7 @@ satnogs_client_pypi:
   - name: 'python-dotenv==0.10.3'
   - name: 'setuptools==44.0.0'
   - name: 'validators==0.14.1'
-  - name: 'sentry_sdk~=0.13.2'
+  - name: 'sentry_sdk==0.13.2'
 satnogs_client_packages:
   - name: 'virtualenv'
   - name: 'python-dev'
@@ -81,3 +81,4 @@ satnogs_client_settings:
   - satnogs_waterfall_min_value
   - satnogs_waterfall_max_value
   - satnogs_log_level
+  - sentry_dsn
