--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -4,22 +4,31 @@ satnogs_client_names:
   - 'satnogs-client'
 satnogs_client_name: "{{ 'satnogsclient' if satnogs_client_version is version('1.0', '<') else 'satnogs-client' }}"
 satnogs_client_user: 'satnogs'
+satnogs_client_pypi:
+  - name: 'satnogsclient'
+    state: 'absent'
+  - name: 'python-dotenv'
+  - name: 'validators'
 satnogs_client_packages:
-  - 'virtualenv'
-  - 'python-dev'
-  - 'redis-server'
-  - 'libffi-dev'
-  - 'libssl-dev'
-  - 'git'
-  - 'python-apscheduler'
-  - 'python-sqlalchemy'
-  - 'python-requests'
-  - 'python-dateutil'
-  - 'python-ephem'
-  - 'python-tz'
-  - 'python-matplotlib'
-  - 'python-numpy'
-  - 'python-gps'
+  - name: 'virtualenv'
+  - name: 'python-dev'
+  - name: 'redis-server'
+  - name: 'libffi-dev'
+  - name: 'libssl-dev'
+  - name: 'git'
+  - name: 'python-apscheduler'
+  - name: 'python-sqlalchemy'
+  - name: 'python-requests'
+  - name: 'python-dateutil'
+  - name: 'python-ephem'
+  - name: 'python-tz'
+  - name: 'python-matplotlib'
+  - name: 'python-numpy'
+  - name: 'python-gps'
+  - name: 'python-typing'
+  - name: 'python-concurrent.futures'
+  - name: 'python-decorator'
+  - name: 'python-funcsigs'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
   - satnogs_api_token
